--- a/src/Cashier/CashierMain.form
+++ b/src/Cashier/CashierMain.form
@@ -325,7 +325,7 @@
             <Property name="useNullLayout" type="boolean" value="false"/>
           </Layout>
           <SubComponents>
-            <Component class="Cashier.Dashboard" name="dashboard2">
+            <Component class="Cashier.cashierDashboard" name="dashboard2">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="0" y="0" width="-1" height="-1"/>
